--- a/android-hilt/app/build.gradle
+++ b/android-hilt/app/build.gradle
@@ -21,7 +21,7 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'dagger.hilt.android.plugin'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
     buildToolsVersion "29.0.3"
 
     defaultConfig {
@@ -31,7 +31,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+        testInstrumentationRunner 'com.example.android.hilt.CustomTestRunner'
 
         javaCompileOptions {
             annotationProcessorOptions {
@@ -63,6 +63,9 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit-ktx:1.1.2"
     androidTestImplementation "androidx.test:rules:1.3.0"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
+
+    androidTestImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
+    kaptAndroidTest "com.google.dagger:hilt-android-compiler:$hilt_version"
 
     // Hilt dependencies
     implementation "com.google.dagger:hilt-android:$hilt_version"
